--- a/css/myclass.css
+++ b/css/myclass.css
@@ -5,10 +5,8 @@
 
 .page {
 	background-color: #fff;
-	margin: 0 auto;
-	position: relative;
-	width: 600px;
-	padding: 10px 0 0;  
+	margin: auto;
+	width: 30%;  
 	box-shadow: 0px 0px 4px #555; 
 	text-align: center;
 }
